tests/typing/error-infer_variable_type/error.expected
File "tests/typing/error-infer_variable_type/error.zf", line 7, character 14-15:
Error Cannot infer type for a quantified variable
